--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -52,8 +52,13 @@
     <p>© 2025 ROAMEO</p>
     <div class="social-icons">
 
-      <a href="https://www.instagram.com/roameo.24/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-      <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+      <a href="https://www.instagram.com/roameo.24/" aria-label="Instagram">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <!-- LinkedIn -->
+      <a href="#" aria-label="LinkedIn">
+        <i class="fab fa-linkedin-in"></i> <!-- fab for brands -->
+      </a>
 
     </div>
   </div>
