--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -160,3 +160,32 @@
 .pt-card:hover img {
     transform: scale(1.03);
 }
+/* Responsive Styles */
+@media (max-width: 1024px) {
+    .nav-links {
+        gap: 20px;
+    }
+    .nav-links ul {
+        gap: 20px;
+    }
+}
+
+@media (max-width: 768px) {
+
+    
+/* Individual Cards */
+.pt-card {
+    position: relative;
+    border-radius: 1cqb;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.pt-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.3s ease;
+}
+
+}
