--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <!-- Fullscreen Background Image with Text -->
 <div class="earth">
-  <video autoplay loop>
-    <source src="\assets\images\BlackMarble_2016_rotate_2160p.mp4" type="video/mp4">
+  <video #backgroundVideo autoplay loop muted playsinline preload="auto">
+    <source src="/assets/images/BlackMarble_2016_rotate_2160p.mp4" type="video/mp4">
     Your browser doesn't support the video tag.
   </video>
   <div class="overlay">
